# AirGym

./: .gitignore  .gitmodules  LICENSE  README.md  airgym_conda_env.yml  configuration.sh  setup.py
airgym/: __init__.py
airgym/assets/: __init__.py  asset_manager.py  asset_register.py
airgym/assets/env_assets/: edit.py
airgym/envs/: __init__.py
airgym/envs/acrobatics/: X152b_sigmoid.py  X152b_sigmoid_config.py  X152b_slit.py  X152b_slit_config.py  X152b_target.py  X152b_target_config.py  t.py
airgym/envs/base/: X152bPx4.py  X152bPx4_config.py  X152bPx4_with_cam.py  X152bPx4_with_cam_config.py  aerial_robot.py  aerial_robot_config.py  aerial_robot_with_obstacles.py  aerial_robot_with_obstacles_config.py  base_task.py  customized.py  customized_config.py  depthgen.py  depthgen_config.py  hovering.py  hovering_config.py  inference.py
airgym/envs/controllers/: attitude_control.py  controller.py  position_control.py  velocity_control.py
airgym/envs/task/: X152bPx4_planning.py  X152bPx4_planning_config.py  X152b_avoid.py  X152b_avoid_config.py  X152b_balloon.py  X152b_balloon_config.py  X152b_planning.py  (+23 more)
airgym/lib/: torch_runner.py
airgym/rl_games/: __init__.py  ppo_X152b.yaml  ppo_X152b_planning.yaml  ppo_X152b_sigmoid.yaml  ppo_X152b_sin.yaml  ppo_X152b_slit.yaml  ppo_X152b_target.yaml  runner.py  target_pub.py
airgym/scripts/: apply_forces_X152b.py  asset_debug.py  asset_display.py  example.py  indoor_scenario_example.py  ma_example.py  play.py
airgym/utils/: __init__.py  asset_manager.py  asset_register.py  helpers.py  rotations.py  task_registry.py  torch_utils.py
doc/: Untitled.prproj
doc/Adobe Premiere Pro Auto-Save/: Untitled--dd0bbcf7-af8d-4ea0-8b9a-e68c122d7a01-2025-03-31_11-11-52.prproj
lib/: torch_runner.py
lib/agent/: a2c_base.py  a2c_continuous.py  players.py
lib/config/: config.py
lib/core/: algo_observer.py  central_value.py  datasets.py  dignostics.py  experience.py  running_mean_std.py  torch_ext.py
lib/model/: a2c_continuous_logstd_model.py  base_model.py
lib/network/: VAE.py  cnn.py  mlp.py  resnet.py  vae_image_encoder.py
lib/utils/: isaacgym_utils.py  vecenv.py
scripts/: ppo_X152b.yaml  ppo_X152b_avoid.yaml  ppo_X152b_balloon.yaml  ppo_X152b_planning.yaml  ppo_X152b_target.yaml  ppo_X152b_target_visual.yaml  ppo_X152b_tracking.yaml  ppo_X152b_with_cam.yaml  runner.py  traj_plt.py
scripts/config/: ppo_X152b_avoid.yaml  ppo_X152b_balloon.yaml  ppo_X152b_planning.yaml  ppo_avoid.yaml  ppo_balloon.yaml  ppo_hover.yaml  ppo_hovering.yaml  ppo_planning.yaml  ppo_tracking.yaml
scripts/pretrained/: hovering_30.pth  hovering_34.pth  hovering_rate.pth  ppo_X152b_hovering_rate.pth  ppo_X152b_planning_rate_vel=1.pth
scripts/trained/: ppo_X152b_avoid_with_depth.pth  ppo_X152b_avoid_with_pose.pth  ppo_X152b_tracking_field_rate.pth  ppo_X152b_tracking_lemniscate_rate.pth
sim2real/: create_inference_conda_env.sh  inference_conda_env.yml
sim2real/src/: README.md
sim2real/src/control_for_gym/: CMakeLists.txt  package.xml
sim2real/src/control_for_gym/include/single_offb_pkg/: regular_motion.hpp
sim2real/src/control_for_gym/launch/: px4.launch  uav_ctrl.launch
sim2real/src/control_for_gym/src/: uav_ctrl.cpp
sim2real/src/real_inference/: CMakeLists.txt  X152b_inference.yaml  package.xml  players.py  real_runner.py  test_pub.py
sim2real/src/real_inference/launch/: real_runner.launch
sim2real/src/real_inference/nn/: ppo_X152b_vel.pth
sim2real/src/real_inference/src/: X152b_inference.yaml  players.py  real_runner.py  target_pub.py  test_pub.py
sim2real/src/real_inference/src/utils/: gymapi.py  torch_ext.py
sim2real/src/real_inference/utils/: gymutil.py
sim2real/src/single_offb_pkg/: CMakeLists.txt  package.xml
sim2real/src/single_offb_pkg/include/single_offb_pkg/: FSM.hpp
sim2real/src/single_offb_pkg/launch/: apm.launch  mission_ctrl.launch  pid_ctrl_test.launch  prepare.launch  pva_pub.launch  px4.launch  robust_ctrl_test.launch  swarm_single.launch  uav_ctrl.launch
sim2real/src/single_offb_pkg/src/: mission_ctrl.cpp  uav_ctrl.cpp
sim2real/src/vehicle_controller/: CMakeLists.txt  package.xml
sim2real/src/vehicle_controller/include/vechicle_controller/: helper_function.hpp  qr_controller.h  regular_motion.h
sim2real/src/vehicle_controller/src/: qr_controller.cpp  regular_motion.cpp
sim2real/src/vrpn_processor/: CMakeLists.txt  package.xml
sim2real/src/vrpn_processor/launch/: vrpn_processor.launch
sim2real/src/vrpn_processor/src/: vrpn_processor.py
trained/: planning_cnn_rate.pth
(+193 files in other folders)
