<?xml version="1.0"?>
<package format="2">
  <name>real_inference</name>
  <version>0.0.0</version>
  <description>The sim2real inference package</description>

  <maintainer email="kangyao.huang@outlook.com">kjaebye</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

</package>
