<?xml version="1.0"?>
<package format="2">
  <name>vrpn_processor</name>
  <version>0.0.0</version>
  <description>The vrpn_processor package</description>

  <maintainer email="kangyao.huang@outlook.com">kjaebye</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
